# openbadges

./: Anchor.toml  Cargo.toml  README.md  cli.sh  package.json
api/: .env  .env.example  .gitignore  README.md  package.json  tsconfig.json
api/src/: index.ts
api/tests/: main.test.ts
app/open_badges/: .env  index.html  (+6 more)
cpi/: Cargo.toml
decentraland/: index.html  launcher.html  main.crdt  package.json  proxy-server.js  scene.json  simple-server.sh  start-remote.sh  tsconfig.json
docs/: decentralized_learning_ecosystem.md
programs/open_badges/: Cargo.toml
programs/open_badges/src/: compliance_validator.rs  credential.rs  credential_status.rs  lib.rs  proof.rs  validation.rs
programs/open_badges/src/common/: credential.rs  errors.rs  mod.rs
programs/open_badges/src/did/: did.rs  methods.rs  mod.rs  resolver.rs
programs/open_badges/src/formats/: mod.rs
programs/open_badges/src/formats/baked/: mod.rs
programs/open_badges/src/formats/jsonld/: builder.rs  builder_new.rs  mod.rs  verifier.rs
programs/open_badges/src/formats/jwt/: builder.rs  mod.rs  verifier.rs
programs/open_badges/src/models/: achievement.rs  endorsement.rs  evidence.rs  issuer.rs  mod.rs
programs/sol_did/: Cargo.toml
programs/sol_did/src/: lib.rs  utils.rs
programs/sol_did/src/instructions/: initialize.rs  migrate.rs  mod.rs
programs/sol_did/src/integrations/: is_authority.rs
programs/sol_did/src/state/: did_account.rs
schemas/: achievement_schema.json  credential_schema.json  evidence_schema.json  profile_schema.json
tests/: decentralized_learning.test.ts  main.test.ts
(+93 files in other folders)
