[package]
name = "sol-did"
version = "3.3.0"
description = "Martin Riedel"
edition = "2021"
readme = "../../README.md"
homepage = "https://www.identity.com/"
repository = "https://github.com/identity-com/sol-did"
license = "MIT"
keywords = ["did", "solana", "identity", "did-method"]

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_did"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
bitflags = "2.6.0"
borsh = "0.10.3"
itertools = "0.13.0"
num-derive = "0.4"
num-traits = "0.2"
solana-security-txt = "1.1.0"
